# personal-site

./: .gitignore  .gitlab-ci.yml  .gitmodules  app.py  config.toml  package-lock.json  package.json  pyproject.toml
blog_stack/: blog_stack.py
content/posts/: 1969-12-31-manual-input-to-an-aws-codepipeline.md  2020-04-18-beginning-a-journey-into-spaced-repition.md  2020-06-16-maybe-its-time-to-just-write.md  2020-06-17-beginning-writing.md  2020-06-25-on-tooling-and-premature-optimization.md
resources/_gen/assets/scss/sass/: style.scss_c16d144eee185fbddd582cd5e25a4fae.content
site/: config.toml
site/content/posts/: 2020-04-18-beginning-a-journey-into-spaced-repition.md  2020-06-16-maybe-its-time-to-just-write.md  2020-11-12-blog-on-aws.md
site/resources/_gen/assets/scss/sass/: style.scss_c16d144eee185fbddd582cd5e25a4fae.json
stacks/: blog_stack.py  hosted_zone_stack.py
stacks/lambda/: index_rewrite.py
